--- a/package.json
+++ b/package.json
@@ -48,8 +48,9 @@
     "@types/cookie-parser": "^1.4.10",
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
-    "@types/node": "^22.10.7",
+    "@types/node": "^22.19.5",
     "@types/passport-local": "^1.0.38",
+    "@types/phoenix": "^1.6.7",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
